force-app/main/default/objects/Faculty__c/Faculty__c.object-meta.xml
<CustomObject>
    <description>Faculty Details</description>
    <label>Faculty</label>
    <nameField>
        <displayFormat>FI-{00000}</displayFormat>
        <label>Faculty ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faculties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>