force-app/main/default/objects/Faculty__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>College Details</description>
    <inlineHelpText>College Details</inlineHelpText>
    <label>College</label>
    <referenceTo>College__c</referenceTo>
    <relationshipName>Faculties</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>