force-app/main/default/objects/Faculty__c/fields/Faculty_Address__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Address__c</fullName>
    <description>Address of the Faculty</description>
    <inlineHelpText>Address of the Faculty</inlineHelpText>
    <label>Faculty Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>