force-app/main/default/objects/Faculty__c/fields/Faculty_DOB__c.field-meta.xml
<CustomField>
    <fullName>Faculty_DOB__c</fullName>
    <description>Date of Birth of the Faculty</description>
    <inlineHelpText>Date of Birth of the Faculty</inlineHelpText>
    <label>Faculty DOB</label>
    <type>Date</type>
</CustomField>