force-app/main/default/objects/Faculty__c/fields/Faculty_Email__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Email__c</fullName>
    <description>Email of the Faculty</description>
    <inlineHelpText>Email of the Faculty</inlineHelpText>
    <label>Faculty Email</label>
    <type>Email</type>
</CustomField>