force-app/main/default/objects/Faculty__c/fields/Faculty_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Mobile_Number__c</fullName>
    <description>Mobile number of the Faculty</description>
    <inlineHelpText>Mobile number of the Faculty</inlineHelpText>
    <label>Faculty Mobile Number</label>
    <type>Phone</type>
</CustomField>