force-app/main/default/objects/Faculty__c/fields/Faculty_Name__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Name__c</fullName>
    <description>Name of the Faculty</description>
    <inlineHelpText>Name of the Faculty</inlineHelpText>
    <label>Faculty Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>